fixed large line-height on tablet/desktop category sidebars

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -84,6 +84,11 @@ $mobile: 24em;
                 text-align: right;
             }
 
+            li {
+                line-height: 1.2;
+                margin-bottom: .7em;
+            }
+
             a {
                 padding: .5rem 0;
                 font-size: 1em;
